Update ROCK, PAPER, SCISSORS GAME.ipynb

--- a/ROCK, PAPER, SCISSORS GAME.ipynb
+++ b/ROCK, PAPER, SCISSORS GAME.ipynb
@@ -40,7 +40,7 @@
     "            if userInput==1:\n",
     "                uchoice=\"rock\"\n",
     "            elif userInput==2:\n",
-    "                uchoice=\"Scissor\"\n",
+    "                uchoice=\"scissor\"\n",
     "            elif userInput==3:\n",
     "                uchoice=\"paper\"\n",
     "            Cchoice=random.choice(l)\n",
@@ -64,7 +64,7 @@
     "                ccount=ccount+1;   \n",
     "                \n",
     "        if ucount==ccount:\n",
-    "            print(\"Final Game Tie....\")\n",
+    "            print(\"\\nFinal Game Tie....\")\n",
     "            print(Name,\"'s Score is\",ucount)\n",
     "            print(\"Computer Score\",ccount)\n",
     "        elif ucount > ccount:\n",
